--- a/NSPlayground2/package.json
+++ b/NSPlayground2/package.json
@@ -33,6 +33,7 @@
         "nativescript-imagepicker": "6.1.2",
         "nativescript-intl": "3.0.0",
         "nativescript-iqkeyboardmanager": "1.4.0",
+        "nativescript-ng-shadow": "^2.1.0",
         "nativescript-social-share": "1.5.1",
         "nativescript-sqlite": "^2.3.3",
         "nativescript-theme-core": "1.0.4",
