--- a/NSPlayground2/package.json
+++ b/NSPlayground2/package.json
@@ -28,6 +28,7 @@
         "nativescript-angular": "7.2.3",
         "nativescript-background-http": "3.4.0",
         "nativescript-camera": "4.4.0",
+        "nativescript-checkbox": "^3.0.3",
         "nativescript-fresco": "5.2.0",
         "nativescript-geolocation": "5.0.0",
         "nativescript-imagepicker": "6.1.2",
